@@ -1,6 +1,6 @@
 /*
- * Copyright (C) 2020 Linux Studio Plugins Project <https://lsp-plug.in/>
- *           (C) 2020 Vladimir Sadovnikov <sadko4u@gmail.com>
+ * Copyright (C) 2023 Linux Studio Plugins Project <https://lsp-plug.in/>
+ *           (C) 2023 Vladimir Sadovnikov <sadko4u@gmail.com>
  *
  * This file is part of lsp-runtime-lib
  * Created on: 17 окт. 2019 г.
@@ -37,9 +37,6 @@ namespace lsp
         
         class Serializer
         {
-            private:
-                Serializer & operator = (const Serializer &);
-
             protected:
                 enum pmode_t
                 {
@@ -83,7 +80,12 @@ namespace lsp
 
             public:
                 explicit Serializer();
+                Serializer(const Serializer &) = delete;
+                Serializer(Serializer &&) = delete;
                 virtual ~Serializer();
+
+                Serializer & operator = (const Serializer &) = delete;
+                Serializer & operator = (Serializer &&) = delete;
 
             public:
                 /**
