@@ -1,6 +1,6 @@
 /*
- * Copyright (C) 2020 Linux Studio Plugins Project <https://lsp-plug.in/>
- *           (C) 2020 Vladimir Sadovnikov <sadko4u@gmail.com>
+ * Copyright (C) 2023 Linux Studio Plugins Project <https://lsp-plug.in/>
+ *           (C) 2023 Vladimir Sadovnikov <sadko4u@gmail.com>
  *
  * This file is part of lsp-runtime-lib
  * Created on: 14 янв. 2018 г.
@@ -468,5 +468,6 @@ namespace lsp
                 *list = chunk_infos.release();
             return count;
         }
-    }
+
+    } /* namespace lspc */
 } /* namespace lsp */
